--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
     <title>About Me</title>
 </head>
 
@@ -51,7 +51,7 @@
         </h2>
 
         <div class="about-info">
-            <img src="../dist/img/me.JPG" alt="" class="bio-image">
+            <img src="me.JPG" alt="" class="bio-image">
 
             <div class="bio">
                 <h3 class="text-secondary">Bio</h3>
@@ -75,7 +75,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 
     <script>
         $('#about').hide().fadeIn(3500);
