--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
     <title>My Work</title>
 </head>
 
@@ -53,7 +53,7 @@
         <div class="projects">
             <div class="item">
                 <a href="#!">
-                    <img src="../dist/img/project1.png" alt="">
+                    <img src="project1.png" alt="">
                 </a>
                 <a href="" class="btn-light">
                     <i class="fas fa-eye"> Project </i>
@@ -64,7 +64,7 @@
             </div>
             <div class="item">
                 <a href="#!">
-                    <img src="../dist/img/project2.png" alt="">
+                    <img src="project2.png" alt="">
                 </a>
                 <a href="" class="btn-light">
                     <i class="fas fa-eye"> Project </i>
@@ -83,7 +83,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 
     <script>
         $('#about').hide().fadeIn(3500);
