--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
         </div>
     </main>
 
+    <footer id="main-footer">
+        Copyright &copy; 2018
+    </footer>
+
     <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
